{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 85,
  "lineage": "00d9a194-e1a8-630d-35ce-bf5344c9542c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hub_vpn_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ee2c6b3de7f4eee7",
            "arn": "arn:aws:ec2:ap-south-1:317789268328:instance/i-02c918a0a468af36e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02c918a0a468af36e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaihumair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-068600a14f4f8b35f"
              }
            ],
            "primary_network_interface_id": "eni-068600a14f4f8b35f",
            "private_dns": "ip-10-0-1-55.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "3.111.23.229",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:317789268328:key/c1f7b8b0-f1ae-4142-8f16-bac255a9fad5",
                "throughput": 0,
                "volume_id": "vol-014ce62e0d09c5e32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e1949a76882b98cd",
            "tags": {
              "Name": "Hub-VPN-Server"
            },
            "tags_all": {
              "Name": "Hub-VPN-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd27bbefaced4fdd"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "i-02c918a0a468af36e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.hub_sg",
            "aws_subnet.hub_public_subnet",
            "aws_vpc.hub_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke_a_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ee2c6b3de7f4eee7",
            "arn": "arn:aws:ec2:ap-south-1:317789268328:instance/i-0dd3d83a8bf8e9588",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd3d83a8bf8e9588",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaihumair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c155a803fdf11d34"
              }
            ],
            "primary_network_interface_id": "eni-0c155a803fdf11d34",
            "private_dns": "ip-10-1-1-43.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.43",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:317789268328:key/c1f7b8b0-f1ae-4142-8f16-bac255a9fad5",
                "throughput": 0,
                "volume_id": "vol-0fdb8bdeabb0d79c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8d5a49a5cc81ab7",
            "tags": {
              "Name": "Spoke-A-App"
            },
            "tags_all": {
              "Name": "Spoke-A-App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f86e23668e3e80ce"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "i-0dd3d83a8bf8e9588",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.spoke_a_sg",
            "aws_subnet.spoke_a_subnet",
            "aws_vpc.spoke_a_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "spoke_b_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0ee2c6b3de7f4eee7",
            "arn": "arn:aws:ec2:ap-south-1:317789268328:instance/i-0d9a42db9480086dd",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9a42db9480086dd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mumbaihumair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e9a4c9149bbff1fe"
              }
            ],
            "primary_network_interface_id": "eni-0e9a4c9149bbff1fe",
            "private_dns": "ip-10-2-1-111.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.111",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:ap-south-1:317789268328:key/c1f7b8b0-f1ae-4142-8f16-bac255a9fad5",
                "throughput": 0,
                "volume_id": "vol-0c368be0aa7f17cf9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f8fde896d4477c0b",
            "tags": {
              "Name": "Spoke-B-App"
            },
            "tags_all": {
              "Name": "Spoke-B-App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bcc2827d1dda69b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "i-0d9a42db9480086dd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.spoke_b_sg",
            "aws_subnet.spoke_b_subnet",
            "aws_vpc.spoke_b_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:internet-gateway/igw-029e2aa529aeacb84",
            "id": "igw-029e2aa529aeacb84",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "tags": {
              "Name": "Hub-IGW"
            },
            "tags_all": {
              "Name": "Hub-IGW"
            },
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hub_to_spoke_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0789acf1ff75f87a43322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0789acf1ff75f87a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-03531eeded0c9c05a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0789acf1ff75f87a4"
          },
          "dependencies": [
            "aws_internet_gateway.hub_igw",
            "aws_route_table.hub_public_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_a_vpc",
            "aws_vpc_peering_connection.hub_spoke_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hub_to_spoke_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0789acf1ff75f87a41218385255",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0789acf1ff75f87a4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-066b4d932aa00e3e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "destination_cidr_block": "10.2.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0789acf1ff75f87a4"
          },
          "dependencies": [
            "aws_internet_gateway.hub_igw",
            "aws_route_table.hub_public_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_b_vpc",
            "aws_vpc_peering_connection.hub_spoke_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke_a_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02be0186239e90051179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-02be0186239e90051",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-03531eeded0c9c05a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-02be0186239e90051"
          },
          "dependencies": [
            "aws_route_table.spoke_a_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_a_vpc",
            "aws_vpc_peering_connection.hub_spoke_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "spoke_b_to_hub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00849adf3f85df342179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-00849adf3f85df342",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-066b4d932aa00e3e1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-00849adf3f85df342"
          },
          "dependencies": [
            "aws_route_table.spoke_b_rt",
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_b_vpc",
            "aws_vpc_peering_connection.hub_spoke_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hub_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:route-table/rtb-0789acf1ff75f87a4",
            "id": "rtb-0789acf1ff75f87a4",
            "owner_id": "317789268328",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029e2aa529aeacb84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Hub-Public-RT"
            },
            "tags_all": {
              "Name": "Hub-Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "rtb-0789acf1ff75f87a4",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.hub_igw",
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke_a_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:route-table/rtb-02be0186239e90051",
            "id": "rtb-02be0186239e90051",
            "owner_id": "317789268328",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Spoke-A-RT"
            },
            "tags_all": {
              "Name": "Spoke-A-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03db12c3a7e9823f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "rtb-02be0186239e90051",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "spoke_b_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:route-table/rtb-00849adf3f85df342",
            "id": "rtb-00849adf3f85df342",
            "owner_id": "317789268328",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Spoke-B-RT"
            },
            "tags_all": {
              "Name": "Spoke-B-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb049c9eac123a03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "rtb-00849adf3f85df342",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hub_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c60e0340af2b8928",
            "region": "ap-south-1",
            "route_table_id": "rtb-0789acf1ff75f87a4",
            "subnet_id": "subnet-0e1949a76882b98cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.hub_igw",
            "aws_route_table.hub_public_rt",
            "aws_subnet.hub_public_subnet",
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke_a_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1388c0dc4507aa2",
            "region": "ap-south-1",
            "route_table_id": "rtb-02be0186239e90051",
            "subnet_id": "subnet-0f8d5a49a5cc81ab7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.spoke_a_rt",
            "aws_subnet.spoke_a_subnet",
            "aws_vpc.spoke_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "spoke_b_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f177ede23bbed864",
            "region": "ap-south-1",
            "route_table_id": "rtb-00849adf3f85df342",
            "subnet_id": "subnet-0f8fde896d4477c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.spoke_b_rt",
            "aws_subnet.spoke_b_subnet",
            "aws_vpc.spoke_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:security-group/sg-0fd27bbefaced4fdd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd27bbefaced4fdd",
            "ingress": [
              {
                "cidr_blocks": [
                  "103.178.142.43/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Hub-SG",
            "name_prefix": "",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Hub-SG"
            },
            "tags_all": {
              "Name": "Hub-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "sg-0fd27bbefaced4fdd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spoke_a_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:security-group/sg-0f86e23668e3e80ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f86e23668e3e80ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Spoke-A-SG",
            "name_prefix": "",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Spoke-A-SG"
            },
            "tags_all": {
              "Name": "Spoke-A-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-03db12c3a7e9823f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "sg-0f86e23668e3e80ce",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spoke_b_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:security-group/sg-00bcc2827d1dda69b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bcc2827d1dda69b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Spoke-B-SG",
            "name_prefix": "",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Spoke-B-SG"
            },
            "tags_all": {
              "Name": "Spoke-B-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb049c9eac123a03"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "sg-00bcc2827d1dda69b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hub_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:subnet/subnet-023c4622d8f6d314c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023c4622d8f6d314c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317789268328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Hub-Private-Subnet"
            },
            "tags_all": {
              "Name": "Hub-Private-Subnet"
            },
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "subnet-023c4622d8f6d314c",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hub_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:subnet/subnet-0e1949a76882b98cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1949a76882b98cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "317789268328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Hub-Public-Subnet"
            },
            "tags_all": {
              "Name": "Hub-Public-Subnet"
            },
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "subnet-0e1949a76882b98cd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:subnet/subnet-0f8d5a49a5cc81ab7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8d5a49a5cc81ab7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317789268328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Spoke-A-Subnet"
            },
            "tags_all": {
              "Name": "Spoke-A-Subnet"
            },
            "vpc_id": "vpc-03db12c3a7e9823f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "subnet-0f8d5a49a5cc81ab7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "spoke_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:subnet/subnet-0f8fde896d4477c0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8fde896d4477c0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "317789268328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Spoke-B-Subnet"
            },
            "tags_all": {
              "Name": "Spoke-B-Subnet"
            },
            "vpc_id": "vpc-0fb049c9eac123a03"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "subnet-0f8fde896d4477c0b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.spoke_b_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:vpc/vpc-0fcbf29c0df6a02e5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02bc950da5e994c63",
            "default_route_table_id": "rtb-04696bfffae6aa63c",
            "default_security_group_id": "sg-0a4f33bc430256e17",
            "dhcp_options_id": "dopt-0469c4bf411db92cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fcbf29c0df6a02e5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04696bfffae6aa63c",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "tags": {
              "Name": "Hub-VPC"
            },
            "tags_all": {
              "Name": "Hub-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "vpc-0fcbf29c0df6a02e5",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke_a_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:vpc/vpc-03db12c3a7e9823f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0dfebabf0709c5384",
            "default_route_table_id": "rtb-0a36cbe90af656fda",
            "default_security_group_id": "sg-052b3f73357beeb1a",
            "dhcp_options_id": "dopt-0469c4bf411db92cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03db12c3a7e9823f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a36cbe90af656fda",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "tags": {
              "Name": "Spoke-A-VPC"
            },
            "tags_all": {
              "Name": "Spoke-A-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "vpc-03db12c3a7e9823f2",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "spoke_b_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:317789268328:vpc/vpc-0fb049c9eac123a03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0bd3e36c2d2340c9c",
            "default_route_table_id": "rtb-0e57068dac55a09cf",
            "default_security_group_id": "sg-0f0aafa14aa4ef294",
            "dhcp_options_id": "dopt-0469c4bf411db92cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb049c9eac123a03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e57068dac55a09cf",
            "owner_id": "317789268328",
            "region": "ap-south-1",
            "tags": {
              "Name": "Spoke-B-VPC"
            },
            "tags_all": {
              "Name": "Spoke-B-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "317789268328",
            "id": "vpc-0fb049c9eac123a03",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "hub_spoke_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-03531eeded0c9c05a",
            "peer_owner_id": "317789268328",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-03db12c3a7e9823f2",
            "region": "ap-south-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Hub-Spoke-A"
            },
            "tags_all": {
              "Name": "Hub-Spoke-A"
            },
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_a_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "hub_spoke_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-066b4d932aa00e3e1",
            "peer_owner_id": "317789268328",
            "peer_region": "ap-south-1",
            "peer_vpc_id": "vpc-0fb049c9eac123a03",
            "region": "ap-south-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "Hub-Spoke-B"
            },
            "tags_all": {
              "Name": "Hub-Spoke-B"
            },
            "vpc_id": "vpc-0fcbf29c0df6a02e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.hub_vpc",
            "aws_vpc.spoke_b_vpc"
          ]
        }
      ]
    }
  ]
}